unify panels spacing

--- a/app/views/lookbook/inspector/panels/_notes.html.erb
+++ b/app/views/lookbook/inspector/panels/_notes.html.erb
@@ -2,7 +2,7 @@
 <% if items.many? %>
   <div class="divide-y divide-dashed divide-lookbook-divider bg-lookbook-prose-bg h-full w-full">
     <% items.each do |item| %>
-      <div class="px-4 py-6 relative">
+      <div class="p-4 relative">
         <h6 class="italic font-mono mb-4 opacity-40">
           # <%= item.label %>
         </h6>
@@ -11,7 +11,7 @@
     <% end %>
   </div>
 <% else %>
-  <div class="px-4 py-6 bg-lookbook-prose-bg w-full h-full">
+  <div class="p-4 w-full h-full bg-lookbook-prose-bg">
     <%= lookbook_render :prose do %>
       <%== items.any? ? items.first.notes : "<em class='opacity-50'>No notes provided.</em>" %>
     <% end %>
