unify panels spacing

--- a/app/components/lookbook/params/editor/component.html.erb
+++ b/app/components/lookbook/params/editor/component.html.erb
@@ -1,4 +1,4 @@
-<%= render_component_tag class: "p-4 overflow-hidden" do %>
+<%= render_component_tag class: "overflow-hidden" do %>
   <div class="border border-lookbook-divider rounded-md overflow-x-auto">
     <table class="border-collapse w-full" :class="narrow && 'linear'">
       <thead>
