do not set params/editor panels specific background/border color, use theme colors instead

--- a/app/components/lookbook/params/editor/component.html.erb
+++ b/app/components/lookbook/params/editor/component.html.erb
@@ -1,5 +1,5 @@
-<%= render_component_tag class: "overflow-hidden" do %>
-  <div class="bg-white border border-lookbook-divider rounded-md overflow-x-auto">
+<%= render_component_tag class: "p-4 overflow-hidden" do %>
+  <div class="border border-lookbook-divider rounded-md overflow-x-auto">
     <table class="border-collapse w-full" :class="narrow && 'linear'">
       <thead>
         <tr>
