--- a/app/assets/lookbook/css/themes/zinc.css
+++ b/app/assets/lookbook/css/themes/zinc.css
@@ -20,6 +20,7 @@
   --lookbook-base-700: theme("colors.zinc.700");
   --lookbook-base-800: theme("colors.zinc.800");
   --lookbook-base-900: theme("colors.zinc.900");
+  --lookbook-draggable-hint: rgb(224 231 255 / 0.2);
   --lookbook-text: var(--lookbook-base-800);
   --lookbook-divider: var(--lookbook-base-300);
   --lookbook-icon-button-stroke: var(--lookbook-base-400);
@@ -50,6 +51,7 @@
   --lookbook-tabs-text-disabled: var(--lookbook-base-300);
   --lookbook-tabs-border-active: var(--lookbook-accent-400);
   --lookbook-viewport-handle: var(--lookbook-white);
+  --lookbook-viewport-handle-hover: var(--lookbook-draggable-hint);
   --lookbook-viewport-handle-icon-stroke: var(--lookbook-base-300);
   --lookbook-viewport-handle-icon-stroke-hover: var(--lookbook-base-700);
   --lookbook-sidebar-bg: var(--lookbook-base-50);
@@ -60,5 +62,4 @@
   --lookbook-header-border: var(--lookbook-accent-700);
   --lookbook-blank-slate-title: var(--lookbook-accent-600);
   --lookbook-branding-text: var(--lookbook-header-text);
-  --lookbook-draggable-hint: rgb(224 231 255 / 0.2);
 }
