set viewport iframe background to the same color as the page backgorund

--- a/app/components/lookbook/viewport/component.html.erb
+++ b/app/components/lookbook/viewport/component.html.erb
@@ -27,7 +27,7 @@
       style="width: calc(100% + 2px); height: calc(100% + 1px); <%= "max-height: #{@max_height}px;" if @max_height.present? %>">
       <iframe seamless<%= " id=#{@iframe_id}" if @iframe_id.present? %>
         x-ref="iframe"
-        class="h-full w-full border border-lookbook-divider"
+        class="bg-lookbook-page-bg h-full w-full border border-lookbook-divider"
         :class="{ 'pointer-events-none': reflowing }"
         style="<%= "max-height: #{@max_height}px;" if @max_height.present? %>"
         src="<%= @src %>"
