--- a/public/lookbook-assets/css/lookbook.css
+++ b/public/lookbook-assets/css/lookbook.css
@@ -242,7 +242,6 @@ select {
   appearance: none;
   print-color-adjust: exact;
   vertical-align: middle;
-  -webkit-user-select: none;
   user-select: none;
   height: 1rem;
   width: 1rem;
@@ -1650,7 +1649,6 @@ pre[class*="language-"] {
   width: min-content;
   z-index: 10;
   height: 100%;
-  -webkit-user-select: none;
   user-select: none;
   border-style: dashed;
   border-right-width: 1px;
@@ -1712,7 +1710,7 @@ pre[class*="language-"] {
 [data-component="icon"] {
   flex: none;
   line-height: 1;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter, backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
   transition-duration: .15s;
   transition-timing-function: cubic-bezier(.4, 0, .2, 1);
   display: block;
@@ -1874,10 +1872,9 @@ pre[class*="language-"] {
 
 [data-component="viewport"] .resize-handle {
   touch-action: none;
-  -webkit-user-select: none;
   user-select: none;
   color: var(--lookbook-viewport-handle-icon-stroke);
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter, backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
   transition-duration: .15s;
   transition-timing-function: cubic-bezier(.4, 0, .2, 1);
 }
@@ -2434,7 +2431,6 @@ input[type="color"]::-webkit-color-swatch {
 }
 
 .select-none {
-  -webkit-user-select: none;
   user-select: none;
 }
 
@@ -3120,7 +3116,7 @@ input[type="color"]::-webkit-color-swatch {
 }
 
 .transition {
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter, backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
   transition-duration: .15s;
   transition-timing-function: cubic-bezier(.4, 0, .2, 1);
 }
