--- a/public/lookbook-assets/css/lookbook.css
+++ b/public/lookbook-assets/css/lookbook.css
@@ -1415,6 +1415,11 @@ pre[class*="language-"] {
   margin-bottom: 0;
 }
 
+.theme-github-light {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
 .theme-github-light .highlight .hll {
   background-color: #f8f8f8;
   border: 1px solid #ccc;
