--- a/app/components/lookbook/params/editor/component.html.erb
+++ b/app/components/lookbook/params/editor/component.html.erb
@@ -1,5 +1,5 @@
 <%= render_component_tag class: "overflow-hidden" do %>
-  <div class="border border-lookbook-divider rounded-md overflow-x-auto">
+  <div class="bg-lookbook-params-editor-bg border border-lookbook-divider rounded-md overflow-x-auto">
     <table class="border-collapse w-full" :class="narrow && 'linear'">
       <thead>
         <tr>
