--- a/public/lookbook-assets/css/lookbook.css
+++ b/public/lookbook-assets/css/lookbook.css
@@ -3203,7 +3203,8 @@ input[type="color"]::-webkit-color-swatch {
   --light-blue-6: navy;
   --hl-bg: var(--light-bg);
   --hl-hll-bg: var(--light-gray-1);
-  --hl-border: var(--light-gray-2);
+  --hl-border: var(--light-gray-3);
+  --hl-line-number: var(--light-gray-2);
   --hl-comment: var(--light-yellow-1);
   --hl-comment-preproc: var(--light-gray-5);
   --hl-comment-special-fg: var(--light-gray-5);
@@ -3248,7 +3249,8 @@ input[type="color"]::-webkit-color-swatch {
 .theme-github.dark {
   --hl-bg: var(--dark-bg);
   --hl-hll-bg: var(--dark-gray-1);
-  --hl-border: var(--dark-gray-2);
+  --hl-border: var(--dark-gray-4);
+  --hl-line-number: var(--dark-gray-2);
   --hl-comment: var(--dark-blue-1);
   --hl-comment-preproc: var(--dark-orange);
   --hl-comment-special-fg: var(--dark-red-3);
@@ -3297,7 +3299,7 @@ input[type="color"]::-webkit-color-swatch {
 .theme-github .line-numbers {
   background-color: var(--hl-bg);
   border-color: var(--hl-border);
-  color: var(--hl-border);
+  color: var(--hl-line-number);
 }
 
 .theme-github .highlight .hll {
