add prose_options to the config to change theme and colors of the Prose::Component

--- a/app/components/lookbook/prose/component.html.erb
+++ b/app/components/lookbook/prose/component.html.erb
@@ -1,3 +1,8 @@
-<%= render_component_tag class: "prose #{size_class} text-lookbook-prose-text bg-lookbook-prose-bg prose-a:text-lookbook-prose-link" do %>
+<%= render_component_tag class: [
+  "prose #{theme_classname} #{size_class} text-lookbook-prose-text bg-lookbook-prose-bg prose-a:text-lookbook-prose-link",
+  {
+    '!prose-invert': @invert_colors # use ! as important to fix tailwindcss bug
+  }
+] do %>
   <%== rendered_content %>
 <% end %>
