fix(params): fix params panel morph error

--- a/app/views/lookbook/inspector/panels/_params.html.erb
+++ b/app/views/lookbook/inspector/panels/_params.html.erb
@@ -1,11 +1,11 @@
 <% if @params.none? %>
-  <div class="p-4 w-full h-full bg-lookbook-prose-bg">
+  <div class="p-4 w-full h-full bg-lookbook-prose-bg" id="params-editor-blank-slate">
     <%= lookbook_render :prose do %>
       <em class='opacity-50'>No params configured.</em>
     <% end %>
   </div>
 <% else %>
-  <div class="p-4 w-full h-full overflow-x-hidden">
+  <div class="p-4 w-full h-full overflow-x-hidden" id="params-editor">
     <%= lookbook_render "params/editor" do |editor| %>
       <% @params.each do |param| %>
         <% editor.field param: param %>
