fix(entities): fix sort order of examples, make entities comparable

--- a/app/components/lookbook/nav/entity/component.html.erb
+++ b/app/components/lookbook/nav/entity/component.html.erb
@@ -1,5 +1,6 @@
 <%= render_component_tag :li,
   id: id,
+  key: "#{id}-entity-#{type}",
   class: "list-none",
   "x-show": "!filteredOut",
   data: { "entity-type": type },
