--- a/app/views/layouts/lookbook/shell.html.erb
+++ b/app/views/layouts/lookbook/shell.html.erb
@@ -2,6 +2,7 @@
   <div
     id="app"
     x-data="app"
+    x-cloak
     @popstate.window="handleNavigation"
     @click.document="hijax"
     @navigation:start="closeMobileSidebar"
