--- a/app/components/lookbook/header/component.html.erb
+++ b/app/components/lookbook/header/component.html.erb
@@ -25,7 +25,10 @@
             <% menu = lookbook_render :debug_menu,
               version: Lookbook::VERSION,
               docs_url: "https://lookbook.build/guide",
-              repo_url: "https://github.com/ViewComponent/lookbook" do %>
+              repo_url: "https://github.com/ViewComponent/lookbook",
+              features: {
+                auto_refresh: Lookbook::Engine.auto_refresh?
+              } do %>
               <%= helpers.pretty_json(Lookbook.debug_data) %>
             <% end %>
             <% button.dropdown({}).with_content(menu) %>
